# microsoft-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  a2a.json  compose.yml  index.html  mcp.compose.yml  mcp_config.json  mcp_server.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  vulture_whitelist.py
.specify/reports/: code_enhancement_report.md
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  usage.md
installation/: index.html
microsoft_agent/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  credential_adapter.py  graph_config.py  main_agent.json  mcp.py  mcp_config.json  mcp_server.py  microsoft_agent.py  microsoft_agent.py.bak  microsoft_api.py  microsoft_mcp.py  middlewares.py  tools.py
microsoft_agent/agent/: HEARTBEAT.md  IDENTITY.md
microsoft_agent/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
microsoft_agent/api/: __init__.py  api_client_admin.py  api_client_apps.py  api_client_base.py  api_client_calendar.py  api_client_directory.py  api_client_drive.py  api_client_mail.py  api_client_other.py  api_client_system.py
microsoft_agent/mcp/: __init__.py  mcp_admin.py  mcp_agreements.py  mcp_applications.py  mcp_audit.py  mcp_auth.py  mcp_calendar.py  mcp_chat.py  mcp_communications.py  mcp_connections.py  mcp_contacts.py  mcp_devices.py  mcp_directory.py  mcp_domains.py  mcp_education.py  mcp_employee_experience.py  mcp_files.py  mcp_groups.py  mcp_identity.py  mcp_mail.py  mcp_meta.py  mcp_notes.py  mcp_organization.py  mcp_places.py  mcp_policies.py  mcp_print.py  mcp_privacy.py  mcp_reports.py  mcp_search.py  mcp_security.py  mcp_sites.py  mcp_solutions.py  mcp_storage.py  mcp_subscriptions.py  mcp_tasks.py  mcp_teams.py  mcp_user.py
microsoft_agent/skills/microsoft-admin/: SKILL.md
microsoft_agent/skills/microsoft-agreements/: SKILL.md
microsoft_agent/skills/microsoft-applications/: SKILL.md
microsoft_agent/skills/microsoft-audit/: SKILL.md
microsoft_agent/skills/microsoft-auth/: SKILL.md
microsoft_agent/skills/microsoft-calendar/: SKILL.md
microsoft_agent/skills/microsoft-chat/: SKILL.md
microsoft_agent/skills/microsoft-communications/: SKILL.md
microsoft_agent/skills/microsoft-connections/: SKILL.md
microsoft_agent/skills/microsoft-contacts/: SKILL.md
microsoft_agent/skills/microsoft-devices/: SKILL.md
microsoft_agent/skills/microsoft-directory/: SKILL.md
microsoft_agent/skills/microsoft-domains/: SKILL.md
microsoft_agent/skills/microsoft-education/: SKILL.md
microsoft_agent/skills/microsoft-employee_experience/: SKILL.md
microsoft_agent/skills/microsoft-files/: SKILL.md
microsoft_agent/skills/microsoft-graph-api-docs/: SKILL.md
microsoft_agent/skills/microsoft-graph-docs/: SKILL.md
microsoft_agent/skills/microsoft-groups/: SKILL.md
microsoft_agent/skills/microsoft-identity/: SKILL.md
microsoft_agent/skills/microsoft-mail/: SKILL.md
microsoft_agent/skills/microsoft-meta/: SKILL.md
microsoft_agent/skills/microsoft-notes/: SKILL.md
microsoft_agent/skills/microsoft-organization/: SKILL.md
microsoft_agent/skills/microsoft-places/: SKILL.md
microsoft_agent/skills/microsoft-policies/: SKILL.md
microsoft_agent/skills/microsoft-print/: SKILL.md
microsoft_agent/skills/microsoft-privacy/: SKILL.md
microsoft_agent/skills/microsoft-reports/: SKILL.md
microsoft_agent/skills/microsoft-search/: SKILL.md
overview/: index.html
scripts/: generate_code.py  generate_mcp.py  microsoft.py
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_agent_server.py  test_auth.py  test_auth_coverage.py  test_concept_parity.py  test_credential_adapter.py  test_main.py  test_mcp_comprehensive.py  test_placeholder.py  test_startup.py
usage/: index.html
(+134 files in other folders)
