[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agent"
version = "0.2.22"
description = "Microsoft Graph Agent MCP Server"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.7",
    "msal>=1.31.0",
    "keyring>=25.1.0",
    "msgraph-sdk>=1.54.0"
]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.7",
]

agent = [
    "agent-utilities[agent,logfire]>=0.2.7",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.7",
]

[project.scripts]
microsoft-mcp = "microsoft_agent.mcp:mcp_server"
microsoft-agent = "microsoft_agent.agent:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
microsoft_agent = [ "mcp_config.json", "skills/**", "agent/**",]
