[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agent"
version = "0.2.56"
description = "Microsoft Graph Agent MCP Server"
readme = "README.md"
classifiers = [ "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities>=0.2.31", "msal>=1.31.0", "keyring>=25.1.0", "msgraph-sdk>=1.54.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.2.31",]
agent = [ "agent-utilities[agent,logfire]>=0.2.31",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.2.31",]
test = [ "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
microsoft-mcp = "microsoft_agent.mcp_server:mcp_server"
microsoft-agent = "microsoft_agent.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
microsoft_agent = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
